# rbcopy-gui

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  makefile  pyproject.toml  rbcopy.spec  run.py
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/workflows/: ci.yaml.old  release.yaml
docs/dev/: README.md  dependencies.md  documentation.md  github.md  makefile.md  pypi.md  robocopy.md  settings.md  testing.md
rbcopy/: app_dirs.py  bookmarks.py  builder.py  cli.py  logger.py  notifications.py  path_history.py  preferences.py  presets.json  presets.py  robocopy_parser.py  storage.py  system_check.py
rbcopy/conf/: __init__.py  settings.py
rbcopy/gui/: __init__.py  bookmark_manager.py  dnd.py  job_history.py  main_window.py  preferences_dialog.py  script_builder.py  types.py
tests/: conftest.py  helpers.py  test___main__.py  test_app_dirs.py  test_bookmarks.py  test_builder.py  test_builder_exit_codes.py  test_builder_scripts.py  test_cli.py  test_conf_settings.py  test_dnd.py  test_e2e_filesystem.py  test_gui.py  test_gui_advanced_mode.py  test_gui_async_bridge.py  test_gui_bookmark_manager.py  test_gui_bookmarks_browse.py  test_gui_execute.py  test_gui_import_patterns.py  test_gui_interactions.py  test_gui_job_history.py  test_gui_job_history_actions.py  test_gui_job_history_filter_search.py  test_gui_job_history_parse.py  test_gui_job_history_refresh.py  test_gui_main_window.py  test_gui_presets.py  test_gui_run.py  test_gui_script_builder.py  test_gui_widget_states.py  test_logger.py  test_notifications.py  test_path_history.py  test_preferences.py  test_presets.py  test_rbcopy.py  test_robocopy_parser.py  test_run.py  test_storage.py  test_system_check.py
