[project]
name = "rbcopy"
description = "A Windows GUI wrapper for Robocopy — the built-in Windows file-copy tool"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license-files = ["LICENSE"]
authors = [{ "name" = "bvf7734" }]
dynamic = ["version"]

dependencies = [
  "pydantic~=2.0",
  "pydantic-settings>=2.0",
  "rich",
  "tkinterdnd2",
  "typer",
]

[project.scripts]
rbcopy = "rbcopy.cli:app"

[dependency-groups]
dev = [
  "build",
  "dapperdata",
  "glom",
  "greenlet",
  "mypy",
  "pyinstaller>=6.19.0",
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "pytest-pretty",
  "ruamel.yaml",
  "ruff",
  "setuptools-scm>=9.2.2",
  "tombi",
  "uv",
]

[build-system]
requires = ["setuptools>=67.0", "setuptools_scm[toml]>=7.1"]
build-backend = "setuptools.build_meta"

[tool.coverage.run]
concurrency = ["thread", "greenlet"]
omit = [
  "./rbcopy/_version.py",
  "./rbcopy/__init__.py",
  "./tests/*",
]

[tool.mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true  # Changed from false to true
disallow_untyped_defs = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]
strict_optional = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest]
asyncio_default_test_loop_scope = "function"
asyncio_mode = "strict"

[tool.ruff]
exclude = [".venv", "./rbcopy/_version.py"]
line-length = 120

[tool.setuptools.dynamic]
readme = { file = ["README.md"] }

[tool.setuptools.package-data]
rbcopy = ["py.typed", "presets.json"]

[tool.setuptools.packages.find]
exclude = ["tests*", "docs*"]

[tool.setuptools_scm]
fallback_version = "0.0.0-dev"
version_file = "rbcopy/_version.py"

[tool.uv]
exclude-newer = "2026-04-16T00:00:00Z"
